pupung website changes for emails to and itsbot and itsnotbot

--- a/html_site/EmailFriendNotConfirm.html
+++ b/html_site/EmailFriendNotConfirm.html
@@ -23,12 +23,13 @@
 	<div id="container2">    	
         <h1><a href="#">svedka</a></h1>
         <div id="mainContent">
-   			<div class="emailfriend ipad"><img src="images/botwin.png" alt="botwin" width="252" height="538" /></div>
+   			<div class="emailfriend ipad" style="padding-top: 120px;"><img src="images/wingel.png" alt="wingel" width="197" height="311" /></div>
         	<h2 style="padding-top: 30px; margin-top: 0; background: none;"><img src="images/botornot2.jpg" alt="botornot2" width="457" height="66" /></h2>           
             <div class="clear"></div>
-            <p class="text">Are you prepared to feel the white-hot envy of your acquaintances? Well, you better get ready because your FREE iPad will be on its way shortly!</p>
+            <p class="text">We received your information and your NOT prize will be sent shortly.  For another chance to win the BOT prize, invite your friends to play. If they win, you win too!</p>
 
-			<p class="text" style="padding-bottom: 190px;">While you're waiting for your prize to propel you into the upper spheres of Botness, check out some of our other events at: <a href="#">www.facebook.com/svedka.</a></p>
+			<p class="text" style="padding-bottom: 150px;">In the meant ime, keep the party going at: <a href="#">www.facebook.com/svedka.</a></p>
+
             <div id="footer">
 	            <p>PLAY RESPONSIBLY. SVEDKA® Vodka - 40% alc/vol. (80 proof), 100% grain neutral spirits, product of Sweden,<br />sole U.S. Importer: Spirits Marque One LLC, New York, NY.</p>
 			</div>
