--- a/html_site/EmailFriendWin.html
+++ b/html_site/EmailFriendWin.html
@@ -20,16 +20,16 @@
 </style>
 </head>
 <body>
-	<div id="container">    	
+	<div id="container2">    	
         <h1><a href="#">svedka</a></h1>
         <div id="mainContent">
-   			<div class="bot friend"><img src="images/botFriendWin.png" alt="" /></div>
+   			<div class="emailfriend ipad" style="margin-left: 380px;"><img src="images/botFriendWin.png" alt="botFriendWin" width="328" height="532" /></div>
         	<h2 class="tagInner left">facebook friendship actually paid off</h2>           
             <div class="clear"></div>
             <p class="text">Remember not too long ago how you invited your friend Zoe Bell to play The SVEDKA Vodka "BOT or NOT" Game? Well, congratulations because your friend just won an iPad which means you just won an iPad too! Now you two can go taunt your other friends with your fabulous winnings, because isn't that what Facebook friends are for?</p>                   
             <div class="redeemiPad"><a href="#">Redeem your iPad</a></div>
             <div id="footer">
-	            <p class="left" style="width:450px;">PLAY RESPONSIBLY. SVEDKA® Vodka - 40% alc/vol. (80 proof), 100% grain neutral spirits, product of Sweden,<br />sole U.S. Importer: Spirits Marque One LLC, New York, NY.</p>
+	            <p>PLAY RESPONSIBLY. SVEDKA® Vodka - 40% alc/vol. (80 proof), 100% grain neutral spirits, product of Sweden,<br />sole U.S. Importer: Spirits Marque One LLC, New York, NY.</p>
 			</div>
             <div class="clear"></div>
             <div id="btm"></div>           
