--- a/html_site/itsbot.html
+++ b/html_site/itsbot.html
@@ -24,18 +24,13 @@
         	<h2 class="left">bot or not?</h2>
             <div class="round right">play and win</div>
             <div class="clear"></div>
-            <p>Everyone is a winner! Sort of. Just pick a door to see if you win this week’s amazing SVEDKA BOT prize … or end up with a fun consolation NOT prize. Increase your chances to win by inviting friends — if they win, you win! Click below to play.</p>
-            <p class="title">This week's bot prize: <span>AND APPLE iPAD!</span></p>            
-            <a href="#" class="playBtn">play</a>
-			<div class="bot" style="top:240px;"><img src="images/bot.png" alt="" /></div>            
-            <img src="images/door.png" alt="" />
-            <div class="left"><img src="images/iPad.png" alt="" /></div>
-            <div class="desc">
-            	<p class="title">the apple iPad</p>
-	            <p>The bottest way to experience the web, email, books, photos, video, apps, music and more.</p>
-    		</div>            
+            <p style="padding-bottom: 20px;">To play, just click on one of the doors to open it and reveal what’s inside. 
+It could be BOT, it could be NOT. Good Luck!</p>            
+            <a href="#" class="youWin">You win</a>
+			<div class="bot" style="top:155px; margin-right: 185px;"><img src="images/bot.png" alt="" /></div>            
+            <img src="images/door-win.png" alt="" />  
             <div class="clear"></div>
-            <a href="#" class="invite">invite friends to play</a>
+            <a href="#" class="redeem">Click to Redeem the iPad</a>
 			<div id="footer">
 	            <p>PLAY RESPONSIBLY. SVEDKA® Vodka - 40% alc/vol. (80 proof), 100% grain neutral spirits, product of Sweden,<br />sole U.S. Importer: Spirits Marque One LLC, New York, NY.</p>
 			</div>
