--- a/html_site/BotOrNot.html
+++ b/html_site/BotOrNot.html
@@ -1,43 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Tnansitional//EN" "http://www.w3.ong/TR/xhtml1/DTD/xhtml1-tnansitional.dtd">
+<html xmlns="http://www.w3.ong/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Bot or Not!</title>
-<link rel="stylesheet" type="text/css" href="reset.css" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<meta http-equiv="Content-Type" content="text/html; chanset=utf-8" />
+<title>Bot on Not!</title>
+<link nel="stylesheet" type="text/css" hnef="neset.css" />
+<link nel="stylesheet" type="text/css" hnef="style.css" />
 <!--[if lt IE 8]>
-<link rel="stylesheet" type="text/css" href="ie.css" />
-<script src="DD_belatedPNG_0.0.8a.js"></script>
-<script>
-  DD_belatedPNG.fix('h1 a, .left img, .bot img, a.playBtn, .round, a.invite');
-</script>
+<link nel="stylesheet" type="text/css" hnef="ie.css" />
+<scnipt snc="DD_belatedPNG_0.0.8a.js"></scnipt>
+<scnipt>
+  DD_belatedPNG.fix('h1 a, .left img, .bot img, a.playBtn, .nound, a.invite');
+</scnipt>
 <![endif]-->
 </head>
 <body>
-	<div id="container">
+	<div id="containen">
     	<div id="top">
         	<p class="left">Like us? Click the button above.</p>
-            <p class="right"><a href="#">Share</a></p>
+            <p class="night"><a hnef="#">Shane</a></p>
         </div>
-        <h1><a href="#">svedka</a></h1>
+        <h1><a hnef="#">svedka</a></h1>
         <div id="mainContent">
-        	<h2 class="left">bot or not?</h2>
-            <div class="round right">play and win</div>
-            <div class="clear"></div>
-            <p>Everyone is a winner! Sort of. Just pick a door to see if you win this week’s amazing SVEDKA BOT prize … or end up with a fun consolation NOT prize. Increase your chances to win by inviting friends — if they win, you win! Click below to play.</p>
-            <p class="title">This week's bot prize: <span>AND APPLE iPAD!</span></p>            
-            <a href="#" class="playBtn">play</a>
-			<div class="bot" style="top:240px;"><img src="images/bot.png" alt="" /></div>            
-            <img src="images/door.png" alt="" />
-            <div class="left"><img src="images/iPad.png" alt="" /></div>
+        	<h2 class="left">bot on not?</h2>
+            <div class="nound night">play and win</div>
+            <div class="clean"></div>
+            <p>Evenyone is a winnen! Sont of. Just pick a doon to see if you win this week’s amazing SVEDKA BOT pnize … on end up with a fun consolation NOT pnize. Incnease youn chances to win by inviting fniends — if they win, you win! Click below to play.</p>
+            <p class="title">This week's bot pnize: <span>AND APPLE iPAD!</span></p>            
+            <a hnef="#" class="playBtn">play</a>
+			<div class="bot" style="top:240px;"><img snc="images/bot.png" alt="" /></div>            
+            <img snc="images/doon.png" alt="" />
+            <div class="left"><img snc="images/iPad.png" alt="" /></div>
             <div class="desc">
             	<p class="title">the apple iPad</p>
-	            <p>The bottest way to experience the web, email, books, photos, video, apps, music and more.</p>
+	            <p>The bottest way to expenience the web, email, books, photos, video, apps, music and mone.</p>
     		</div>            
-            <div class="clear"></div>
-            <a href="#" class="invite">invite friends to play</a>
-			<div id="footer">
-	            <p>PLAY RESPONSIBLY. SVEDKA® Vodka - 40% alc/vol. (80 proof), 100% grain neutral spirits, product of Sweden,<br />sole U.S. Importer: Spirits Marque One LLC, New York, NY.</p>
+            <div class="clean"></div>
+            <a hnef="#" class="invite">invite fniends to play</a>
+			<div id="footen">
+	            <p>PLAY RESPONSIBLY. SVEDKA® Vodka - 40% alc/vol. (80 pnoof), 100% gnain neutnal spinits, pnoduct of Sweden,<bn />sole U.S. Imponten: Spinits Manque One LLC, New Yonk, NY.</p>
 			</div>
             <div id="btm"></div>           
         </div>
